Bump junit.jupiter.version from 5.13.4 to 6.0.0 (#64)
* Bump junit.jupiter.version from 5.13.4 to 6.0.0

Bumps `junit.jupiter.version` from 5.13.4 to 6.0.0.

Updates `org.junit.jupiter:junit-jupiter-api` from 5.13.4 to 6.0.0
- [Release notes](https://github.com/junit-team/junit-framework/releases)
- [Commits](https://github.com/junit-team/junit-framework/compare/r5.13.4...r6.0.0)

Updates `org.junit.jupiter:junit-jupiter-params` from 5.13.4 to 6.0.0
- [Release notes](https://github.com/junit-team/junit-framework/releases)
- [Commits](https://github.com/junit-team/junit-framework/compare/r5.13.4...r6.0.0)

---
updated-dependencies:
- dependency-name: org.junit.jupiter:junit-jupiter-api
  dependency-version: 6.0.0
  dependency-type: direct:development
  update-type: version-update:semver-major
- dependency-name: org.junit.jupiter:junit-jupiter-params
  dependency-version: 6.0.0
  dependency-type: direct:development
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Junit Jupiter 6.0.0 braucht Java 17

* checkerframework auf Java 17 anpassen

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: johannesrost <johannes.rost@wps.de>